fixed DaoAuthenticationProvider setup spring security version